--- a/scss/_utils.scss
+++ b/scss/_utils.scss
@@ -82,7 +82,7 @@
   position: relative;
 
   @include mobile {
-    width: rem(360);
+    width: rem(320);
     height: rem(87);
     padding-top: 10px;
   }
@@ -98,5 +98,49 @@
   & > *:not(img) {
     position: relative;
     z-index: 1;
+  }
+}
+
+.slider-controls {
+  display: flex;
+  gap: rem(20);
+
+  & > button {
+    @include flex-center;
+    width: rem(32);
+    height: rem(32);
+    border: 0.5px solid var(--color-brown);
+    border-radius: 10px;
+    box-shadow: 3px 3px 4px 0 rgba(139, 69, 19, 0.3);
+    background: transparent;
+    position: relative;
+
+    &:hover {
+      background: rgba(0, 0, 0, 0.2);
+    }
+
+    &:active {
+      background: transparent;
+    }
+
+    &:disabled {
+      cursor: auto;
+      opacity: 0.6;
+      box-shadow: none;
+
+      &:hover {
+        background: transparent;
+      }
+    }
+
+    svg {
+      @include abs-center;
+    }
+  }
+
+  & > button:last-of-type {
+    svg {
+      rotate: 180deg;
+    }
   }
 }
