--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,5 +10,10 @@
 @use "./blocks/about";
 @use "./blocks/geography";
 @use "./blocks/services";
+@use "./blocks/program";
+@use "./blocks/reviews";
+@use "./blocks/support";
+
+@use "./blocks/footer";
 
 @use "./blocks/popup";
