--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -19,11 +19,26 @@
     content: "";
     position: absolute;
     inset: 0;
-    z-index: 0;
+    z-index: 1;
     background-image: linear-gradient(
       rgba(255, 243, 221, 0) 0 80%,
       #fff3dd 100%
     );
+  }
+}
+
+.hero__bg {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+
+  &.loaded {
+    opacity: 1;
   }
 }
 
@@ -32,7 +47,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 
 .hero__title {
