--- a/scss/blocks/_services.scss
+++ b/scss/blocks/_services.scss
@@ -2,7 +2,7 @@
 
 .services {
   padding-top: rem(90);
-  padding-bottom: rem(65);
+  padding-bottom: rem(55);
 }
 
 .services__container {
@@ -40,6 +40,7 @@
 
 .services__slider {
   position: relative;
+  padding-bottom: 10px;
 
   @include mobile {
     max-width: 100%;
